@@ -8,6 +8,7 @@
 # Contributors:
 #       QNX Software Systems - Initial API and implementation
 # 		Monta Vista - Joanne Woo - Bug 87556
+#       Nokia - Ken Ryall - Bug 118894
 ###############################################################################
 
 AbstractCLaunchDelegate.Debugger_not_installed=CDT Debugger not installed
@@ -94,8 +95,9 @@ CMainTab.UseTerminal=Connect process input && output to a terminal.
 CMainTab.Program_is_not_a_recongnized_executable=Program is not a recognized executable.
 
 CDebuggerTab.Advanced_Options_Dialog_Title=Advanced Options
-CDebuggerTab.Stop_at_main_on_startup=Stop at main() on startup
+CDebuggerTab.Stop_at_main_on_startup=Stop on startup at:
 CDebuggerTab.Automatically_track_values_of=Automatically track the values of
+CDebuggerTab.Stop_on_startup_at_can_not_be_empty=The "Stop on startup at" field can not be empty.
 CDebuggerTab.Debugger_Options=Debugger Options
 CDebuggerTab.Mode_not_supported=Mode ''{0}'' is not supported by selected debugger
 CDebuggerTab.Advanced=Advanced...
