@@ -1,3 +1,9 @@
+2006-01-29 Mikhail Khodjaiants
+	Bug 118894: Allow stopping at other locations other than main().
+	Applied patch from Ken Ryall (Nokia).
+	* LaunchMessages.properties
+	* CDebuggerTab.java
+
 2006-01-25 Mikhail Khodjaiants
 	Reversing changes made to fix bug 107571. The fix for bug 119683 covers this problem too.
 	Inferior process shouldn't be shown as a part of the attach session.
