@@ -1,3 +1,9 @@
+2006-01-29 Mikhail Khodjaiants
+	Bug 118894: Allow stopping at other locations other than main().
+	Applied patch from Ken Ryall (Nokia).
+	* ICDTLaunchConfigurationConstants.java
+	* CDebugTarget.java
+
 2006-01-23 Mikhail Khodjaiants
 	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.
 	New "createSession" method accepts File instead of IBinaryObject.
